# libcreds3

./: .gitmodules  Makefile.am  README  capnames.pl  configure.ac  creds-get.c  creds.c  creds_fallback.h  credsctl.c
debian/: changelog  files  libcreds3-tools.files  libcreds3.files
dox/: Doxyfile
libcreds3/: TODO  cap_names.h  creds-test.c
libcreds3/debian/: control  libcreds3-doc.docs  libcreds3-tools.substvars  rules
libcreds3/dox/: Makefile.am
libcreds3/sys/: creds.h
rpm/: libcreds3.changes  libcreds3.spec  libcreds3.yaml
